--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,3 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    a,
+    button,
+    input,
+    textarea,
+    svg * {
+        @apply transition-all duration-200 ease-in-out
+    }
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/assets/fonts/Roboto-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/assets/fonts/Roboto-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+input:focus, textarea:focus, select:focus {
+    outline: none !important;
+}
